--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <!-- Botão flutuante WhatsApp -->
   <a href="https://wa.me/message/BOD7PZGF3RWLF1" class="whatsapp-float" target="_blank"></a>
+
+  <!-- Topo: capa aérea + título + destaque 2/3 quartos -->
   <header class="hero">
     <img src="img/capa-regiao.jpg" alt="Sky Mario Guimarães – Nova Iguaçu">
     <div class="hero-text">
@@ -16,7 +20,10 @@
       <p>2 e 3 quartos com suíte, varanda gourmet e lazer Premium</p>
     </div>
   </header>
+
   <main class="container">
+
+    <!-- Formulário Principal -->
     <section class="form-section">
       <form action="https://formsubmit.co/gabriel.bernardo.rivavendas@gmail.com" method="POST">
         <input type="hidden" name="_captcha" value="false">
@@ -26,6 +33,8 @@
         <button type="submit">Quero saber mais</button>
       </form>
     </section>
+
+    <!-- Mapa + Localização -->
     <section class="map-section">
       <div class="map-wrapper">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.123456789012!2d-43.0!3d-22.75!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa7b12345678abc:0xdd1234567890!2sRua%20Dr.%20Mario%20Guimar%C3%A3es%2C%20Nova%20Igua%C3%A7u!5e0!3m2!1spt-BR!2sbr!4v1700000000000"
@@ -36,6 +45,8 @@
         <p><strong>Sky Mario Guimarães</strong><br>Rua Dr. Mário Guimarães, Nova Iguaçu – RJ</p>
       </div>
     </section>
+
+    <!-- Sobre o Empreendimento -->
     <section class="info-section">
       <h2>Sobre o Projeto</h2>
       <ul>
@@ -46,6 +57,8 @@
         <li>Pré-lançamento – garanta prioridade agora!</li>
       </ul>
     </section>
+
+    <!-- Galeria de imagens -->
     <section class="gallery-section">
       <h2>Galeria</h2>
       <div class="gallery">
@@ -56,6 +69,8 @@
         <img src="img/gal5.jpg" alt="">
       </div>
     </section>
+
+    <!-- Segundo formulário com urgência -->
     <section class="form-section">
       <h2>Não perca essa oportunidade</h2>
       <form action="https://formsubmit.co/gabriel.bernardo.rivavendas@gmail.com" method="POST">
@@ -66,13 +81,18 @@
         <button type="submit">Cadastro prioritário</button>
       </form>
     </section>
+
+    <!-- Fale conosco -->
     <section class="contact-section">
       <h2>Fale conosco</h2>
       <a href="https://wa.me/message/BOD7PZGF3RWLF1" target="_blank" class="btn-contact">WhatsApp agora</a>
     </section>
+
   </main>
+
   <footer>
     <p>© 2025 Gabriel Bernardo | Corretor de Imóveis</p>
   </footer>
+
 </body>
 </html>
