--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
       <ul>
         <li>2 e 3 quartos com suíte e varanda gourmet</li>
         <li>Lazer completo e Premium</li>
-        <li>Entrada facilitada & diversas formas de pagamento</li>
-        <li>Público média & faixa Minha Casa Minha Vida 4</li>
+        <li>Entrada facilitada & diversas formas de pagamento</li>        
         <li>Pré-lançamento – garanta prioridade agora!</li>
       </ul>
     </section>
@@ -62,11 +61,10 @@
     <section class="gallery-section">
       <h2>Galeria</h2>
       <div class="gallery">
-        <img src="img/gal1.webp" alt="">
-        <img src="img/gal2.webp" alt="">
-        <img src="img/gal3.jpg" alt="">
-        <img src="img/gal4.jpg" alt="">
-        <img src="img/gal5.jpg" alt="">
+        <img src="https://i.ibb.co/VRR1T6q/Whats-App-Image-2025-06-09-at-16-30-39.webp" alt="">
+        <img src="https://i.ibb.co/9kfdfgpp/Whats-App-Image-2025-06-09-at-16-30-39-1.webp" alt="">
+        <img src="https://i.ibb.co/bjwCGWcL/Whats-App-Image-2025-06-09-at-17-45-20-1.jpg" alt="">
+        <img src="https://i.ibb.co/DPWBhv5j/Whats-App-Image-2025-06-09-at-17-45-20.jpg" alt="">
       </div>
     </section>
 
