--- a/obrigado.html
+++ b/obrigado.html
@@ -1,4 +1,4 @@
-/* Estilos omitidos para economizar espaço no preview */<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8"/>
